--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -18,4 +18,9 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
+/* globals.css */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
